tests/ui/fips_keygen_public_output_no_secret_export.stderr
error[E0599]: no method named `reconstruct_secret` found for struct `FipsPublicKeyDerivation65` in the current scope
  --> tests/ui/fips_keygen_public_output_no_secret_export.rs:25:20
   |
25 |     let _ = output.reconstruct_secret();
   |                    ^^^^^^^^^^^^^^^^^^ method not found in `FipsPublicKeyDerivation65`

error[E0599]: no method named `export_secret` found for struct `FipsPublicKeyDerivation65` in the current scope
  --> tests/ui/fips_keygen_public_output_no_secret_export.rs:26:20
   |
26 |     let _ = output.export_secret();
   |                    ^^^^^^^^^^^^^ method not found in `FipsPublicKeyDerivation65`
